--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Prashant Bhat",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
